2007-08-25  Benny Malengier <bm@cage.ugent.be>
	* src/Config/_GrampsConfigKeys.py : store last export type
	* src/ExportAssistant.py          : use last export type

2007-08-25  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_ReportUtils.py: 0001121: Output relationship type 
	correctly in Detailed descendant and ancestor reports (improved)

2007-08-24  Don Allingham  <don@gramps-project.org>
	* src/ExportAssistant.py: fix grammar
	* src/ExportOptions.py: place for common options, build option dialog for
	exporters
	* src/GrampsDbUtils/_WriteGedcom.py: handle restrict, private, and new
	option dialog
	* src/GrampsDbUtils/_PrivateProxyDb.py: add get_researcher()
	* src/GrampsDbUtils/exportgedcom.glade: removed
	
2007-08-25  Benny Malengier <bm@cage.ugent.be>
	* src/plugins/rel_de.py  : nomeata, bug #1183

2007-08-24  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditNote.py (EditNote._setup_fields): privacy button
	for notes (bug #1148)
	* src/glade/gramps.glade: privacy button for notes

2007-08-24  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py: Generate LONG and LATI 
	* src/docgen/Makefile.am: replace LPRDoc with GtkPrint
	
2007-08-24  Don Allingham  <don@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: added coment on how do add a new
	key

2007-08-24  Brian Matherly <brian@gramps-project.org>
	* src/GrampsDbUtils/_PrivateProxyDb.py: Implement get_default_person and
	  get_default_handle

2007-08-23  Benny Malengier <bm@cage.ugent.be>
	* src/ExportAssistant.py: finished, new export assistant
	* src/ViewManager.py    : delete temporary hook new export assistant
	* src/Makefile.am       : delete Exporter.py
	* po/POTFILES.in        : delete Exporter.py
	* src/Assistant.py      : comment to use gtk.Assistant - deprecated
	* src/Exporter.py       : delete

2007-08-23  Stephane Charette  <stephanecharette@gmail.com>
	* src/plugins/NarrativeWeb.py: moved the source reference code from